# transbook-oss

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_background_sampler.py  test_bbox.py  test_pipeline_smoke.py  test_schema.py
transbook/: cli.py
transbook/ocr/: bbox.py  mock_ocr.py  schema.py
transbook/pipeline/: process_image.py
transbook/render/: pillow_overlay.py
transbook/translation/: mock_translator.py
transbook/vision/: background_sampler.py  visual_metadata.py
transbook_oss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
