[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transbook-oss"
version = "0.1.0"
description = "OCR-to-translation overlay pipeline for image-based ebooks and documents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.0",
    "pillow>=10.0",
    "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
include = ["transbook*"]
exclude = ["samples*", "tests*", "outputs*", "local_inputs*", "private_inputs*"]

[tool.ruff]
line-length = 100